Revert "nahhh wait"
This reverts commit 45423fc9b1d8cf791f61b6b18165fd780b50b443.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-  <title>Xeon_Fox</title>
+  <title>Tyo Semyon</title>
   <link rel="stylesheet" href="styles/style.css">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
     crossorigin="anonymous">
@@ -19,7 +19,7 @@
       <div class="ten columns">
         <div class="page-wrapper">
           <div class="header">
-            <h1 id="my-name">Xeon_Fox</h1>
+            <h1 id="my-name">Tyo Semyon</h1>
             <hr id="top-divider">
           </div>
           <div class="content">
