--- a/main.html
+++ b/main.html
@@ -37,7 +37,7 @@
   <!-- TaskBar -->
 
   <div class="taskbar">
-    <button class="startbutton startbuttonactive"></button>
+    <button class="startbutton"></button>
     <!-- this is the default state.
     the button above is used for hover and active.
     if you want the active state to stick, switch the
