--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
     <title>Semyon's Page</title>
     <link rel="stylesheet" href="styles/log.css">
+    <link rel="icon" type="image/x-icon" href="resources/img/favicon.ico">
   </head>
   <body data-new-gr-c-s-check-loaded="8.927.0" data-gr-ext-installed="">
     <div class="profileicon">
@@ -11,7 +12,7 @@
   
   <script>
       window.addEventListener('DOMContentLoaded', (event) => {
-        const audio = new Audio('./assets/startup.mp3');
+        const audio = new Audio('resources/audio/startup.mp3');
         audio.play();
       });
   </script>
