--- a/main.html
+++ b/main.html
@@ -2,6 +2,7 @@
 <head>
   <title>Semyon's page</title>
   <link rel="stylesheet" href="styles/style.css">
+  <link rel="icon" type="image/x-icon" href="resources/img/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body{
