--- a/main.html
+++ b/main.html
@@ -114,5 +114,16 @@
 <script src="JS/TaskbarGradient.js"></script>
 
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6N7FC828GN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6N7FC828GN');
+</script>
+
+
 <script src="JS/StartButton.js"></script>
 </body>
