--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
   </div>
   <button onclick="window.location.href='./main.html'" class="forwardbtn"><u>L</u>og In</button>
   
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-6N7FC828GN"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-6N7FC828GN');
+  </script>
+
   <script>
       window.addEventListener('DOMContentLoaded', (event) => {
         const audio = new Audio('resources/audio/startup.mp3');
