--- a/main.html
+++ b/main.html
@@ -30,6 +30,13 @@
 
 </head>
 <body data-new-gr-c-s-check-loaded="8.927.0" data-gr-ext-installed="">
+  <!-- Desktop -->
+  <div style="display: flex;left: 20px;position: absolute;top: 10px;">
+    <div>
+      <img src="resources/img/information.png" alt="" style="justify-content: flex-start;display: flex;max-height: 50px;">
+    </div>
+  </div>
+
 
   <!-- TaskBar -->
 
@@ -81,29 +88,6 @@
             <p>Hi! My name is Semyon.</p>
             <br> <p>This site is just a passion project with a style of Windows 7</p>
           </div>
-          <!--<p>DevBuild Text</p>
-          <br> <p>lalalala css is epick.</p>
-
-          <input type="checkbox" id="checkbox1">
-          <label for="checkbox1">click me and ill tick myself</label>
-
-          <fieldset>
-            <div class="field-row">radio buttons:</div>
-            <div class="field-row">
-              <input id="radio5" type="radio" name="fieldset-example">
-              <label for="radio5">Me?</label>
-            </div>
-            <div class="field-row">
-              <input id="radio6" type="radio" name="fieldset-example">
-              <label for="radio6">No, Me!</label>
-            </div>
-          </fieldset>
-
-          <section class="field-row" style="justify-content: flex-end">
-            <button>OK</button>
-            <button>Cancel</button>
-          </section> -->
-
           <div class="field-row" style="bottom: 20px; position: absolute;">
             <img src="resources/img/advert1.png" style="max-width: 300px; max-height: 150px; margin-left: 75px;" alt="">
             <img src="resources/img/advert2.png" style="max-width: 300px; max-height: 150px; margin-left: 100px;" alt="">
