--- a/main.html
+++ b/main.html
@@ -31,11 +31,39 @@
 </head>
 <body data-new-gr-c-s-check-loaded="8.927.0" data-gr-ext-installed="">
   <!-- Desktop -->
-  <div style="display: flex;left: 20px;position: absolute;top: 10px;">
-    <div>
-      <img src="resources/img/information.png" alt="" style="justify-content: flex-start;display: flex;max-height: 50px;">
+  <div class="desktop">
+    <div class="desktopicon">
+        <div style="position: absolute; left: 20px; user-select: none;">
+          <img src="resources/img/information.png" alt="" style="justify-content: flex-start;display: flex;max-height: 50px;">
+          <p style="color: white; margin-left: 11px;">Info</p>
+        </div>
+    </div>
+    <div class="desktopicon" style="position: absolute;top: 100px;">
+      <div style="position: absolute; left: 20px; user-select: none;">
+        <img src="resources/ico/trash.ico" alt="" style="justify-content: flex-start;display: flex;max-height: 50px;">
+        <p style="color: white; width: 1200px;">Recycle Bin</p>
+      </div>
+    </div>
+    <div class="desktopicon" style="position: absolute;top: 200px;">
+      <div style="position: absolute; left: 20px; user-select: none;">
+        <img src="resources/ico/pc.ico" alt="" style="justify-content: flex-start;display: flex;max-height: 50px;">
+        <p style="color: white;">My PC</p>
+      </div>
+    </div>
+    <div class="desktopicon" style="position: absolute;top: 300px;">
+      <div style="position: absolute; left: 20px; user-select: none;">
+        <img src="resources/ico/player.ico" alt="" style="justify-content: flex-start;display: flex;max-height: 50px;">
+        <p style="color: white; margin-left: 5px;">Music</p>
+      </div>
+    </div>
+    <div class="desktopicon" style="position: absolute;top: 400px;">
+      <div style="position: absolute; left: 20px; user-select: none;">
+        <img src="resources/ico/vid.ico" alt="" style="justify-content: flex-start;display: flex;max-height: 50px;">
+        <p style="color: white; margin-left: 1px;">Videos</p>
+      </div>
     </div>
   </div>
+
 
 
   <!-- TaskBar -->
@@ -102,6 +130,19 @@
 <!-- Taskbar Gradient Hover -->
 <script src="JS/TaskbarGradient.js"></script>
 
+<script>
+  window.addEventListener('DOMContentLoaded', () => {
+      const audio = new Audio('resources/audio/startup.mp3');
+      const startAudio = () => {
+          audio.play().then(() => {
+              document.removeEventListener('mousemove', startAudio);
+              document.removeEventListener('click', startAudio);
+          });
+      };
+      document.addEventListener('mousemove', startAudio);
+      document.addEventListener('click', startAudio);
+  });
 
+</script>
 <script src="JS/StartButton.js"></script>
 </body>
