icons and desktop

--- a/main.html
+++ b/main.html
@@ -41,7 +41,7 @@
     <div class="desktopicon" style="position: absolute;top: 100px;">
       <div style="position: absolute; left: 20px; user-select: none;">
         <img src="resources/ico/trash.ico" alt="" style="justify-content: flex-start;display: flex;max-height: 50px;">
-        <p style="color: white; width: 1200px;">Recycle Bin</p>
+        <p style="color: white;">Recycle Bin</p>
       </div>
     </div>
     <div class="desktopicon" style="position: absolute;top: 200px;">
@@ -126,6 +126,11 @@
 
       <!-- window drag -->
       <script src="JS/WindowDrag.js"></script>
+
+ <!-- window buttons  -->
+<script src="JS/WindowButtons.js"></script>
+
+<script src="JS/DesktopButtons.js"></script>
 
 <!-- Taskbar Gradient Hover -->
 <script src="JS/TaskbarGradient.js"></script>
