--- a/main.html
+++ b/main.html
@@ -62,6 +62,12 @@
         <p style="color: white; margin-left: 1px;">Videos</p>
       </div>
     </div>
+    <div class="desktopicon" style="position: absolute;top: 500px;">
+      <div style="position: absolute; left: 20px; user-select: none;">
+        <img src="resources/ico/pic.ico" alt="" style="justify-content: flex-start;display: flex;max-height: 50px;">
+        <p style="color: white; margin-left: 1px;">Images</p>
+      </div>
+    </div>
   </div>
 
 
