--- a/main.html
+++ b/main.html
@@ -40,8 +40,8 @@
     </div>
     <div class="desktopicon" style="position: absolute;top: 100px;">
       <div style="position: absolute; left: 20px; user-select: none;">
-        <img src="resources/ico/trash.ico" alt="" style="justify-content: flex-start;display: flex;max-height: 50px;">
-        <p style="color: white;">Recycle Bin</p>
+        <img src="resources/ico/folder.ico" alt="" style="justify-content: flex-start;display: flex;max-height: 50px;">
+        <p style="color: white; margin-left: 5px;">Links</p>
       </div>
     </div>
     <div class="desktopicon" style="position: absolute;top: 200px;">
@@ -105,8 +105,8 @@
   </div>
 
 <!-- Window -->
-  
-    <div class="window" style="width: 900px; top: 10px; left: 530px;" id="window">
+    <!-- 1 window -->
+    <div class="window" style="z-index: 1; width: 900px; top: 10px; left: 530px;" id="window">
         <div class="title-bar" id="windowheader">
             <img aria-label="windowicon" src="resources/img/information.png">
           <div class="title-bar-text">Info</div>
@@ -129,12 +129,68 @@
         </div>
     </div>
 
+    <!-- 2 window -->
+    <div class="window" style="width: 900px; top: 10px; left: 500px;" id="window">
+      <div class="title-bar" id="windowheader">
+          <img aria-label="windowicon" src="resources/ico/folder.ico">
+          <div class="title-bar-text">Links</div>
+          <div class="title-bar-controls">
+              <button aria-label="Minimize"></button>
+              <button aria-label="Maximize"></button>
+              <button aria-label="Close"></button>
+          </div>
+      </div>
+      <div class="window-body" style="height: 600px; display: flex; flex-direction: column;">
+          <div class="toolbar" style="display: flex; justify-content: space-between; padding: 5px; background-color: #e8e8e8; border-bottom: 1px solid #ccc;">
+              <div style="font-size: 14px;"><u>F</u>ile  <u>E</u>dit   <u>V</u>iew   <u>T</u>ools   <u>H</u>elp</div>
+              <div style="width: 20px; height: 20px;"><img style="width: 20px; height: 20px;" src="resources/ico/search.ico" alt=""></div>
+          </div>
+          <div class="content" style="flex: 1; padding: 10px; background-color: #ffffff;">
+              <ul class="sidebar" style="float: left; width: 200px; padding: 0; margin: 0; list-style: none;">
+                  <li style="padding: 5px; border-bottom: 1px solid #ddd;">Favorites</li>
+                  <li style="padding: 5px;">Desktop</li>
+                  <li style="padding: 5px;">Downloads</li>
+                  <li style="padding: 5px;">Recent Places</li>
+                  <li style="padding: 5px; border-top: 1px solid #ddd;">Libraries</li>
+                  <li style="padding: 5px;">Documents</li>
+                  <li style="padding: 5px;">Music</li>
+                  <li style="padding: 5px;">Pictures</li>
+                  <li style="padding: 5px;">Videos</li>
+                  <li style="padding: 5px; border-top: 1px solid #ddd;">Computer</li>
+                  <li style="padding: 5px;">Network</li>
+              </ul>
+              <div class="main-content" style="margin-left: 210px;">
+                  <p style="font-size: 14px; color: #555;">0 items</p>
+              </div>
+          </div>
+      </div>
+  </div>
+
+  <!-- mobile err window -->
+  <div class="window hidden" style="width: 250px; top: 335px; left: 148px;" id="windowmobile">
+    <div class="title-bar" id="windowheader">
+        <img aria-label="windowicon" src="resources/ico/error.ico">
+      <div class="title-bar-text">pls use PC</div>
+      <div class="title-bar-controls">
+        <button aria-label="Close"></button>
+      </div>
+    </div>
+    <div class="window-body" style="height:145px;">
+      <p>hi so you see this because youre on a mobile. For best experience use something 16:9 if you can thanks</p>
+
+      <section class="field-row" style="justify-content: flex-end">
+        <button>OK</button>
+      </section>
+    </div>
+  </div>
+
 
       <!-- window drag -->
       <script src="JS/WindowDrag.js"></script>
-
  <!-- window buttons  -->
 <script src="JS/WindowButtons.js"></script>
+
+<script src="JS/MoblieCheck.js"></script>
 
 <script src="JS/DesktopButtons.js"></script>
 
