--- a/main.html
+++ b/main.html
@@ -104,7 +104,7 @@
     <div class="startinner"></div>
   </div>
 
-<!-- Window -->
+<!-- Windows -->
     <!-- 1 window -->
     <div class="window" style="z-index: 1; width: 900px; top: 10px; left: 530px;" id="window">
         <div class="title-bar" id="windowheader">
@@ -160,7 +160,43 @@
                   <li style="padding: 5px;">Network</li>
               </ul>
               <div class="main-content" style="margin-left: 210px;">
-                  <p style="font-size: 14px; color: #555;">0 items</p>
+                  <p style="font-size: 14px; color: #555;">8 items</p>
+                  <div style="margin-top: 10px; display: flex; align-content: space-evenly; justify-content: space-between; width: 640px;">
+                    <a target=”_blank” href="https://github.com/aerosness">
+                      <img style="max-width: 50px; max-height: 50px;" src="resources/img/githublogo.png">
+                      <p style="text-align: center; position: absolute;">Github</p>
+                    </a>
+                    <a target=”_blank” href="https://www.youtube.com/@aerosness">
+                      <img style="max-width: 50px; max-height: 50px;" src="resources/img/ytlogo.png">
+                      <p style="text-align: center; position: absolute;">Youtube</p>
+                    </a>
+                    <a target=”_blank” href="https://open.spotify.com/user/5dwbjptmadzo73rzcvhnpxmnj">
+                      <img style="max-width: 50px; max-height: 50px;" src="resources/img/spotifylogo.png">
+                      <p style="text-align: center; position: absolute; margin-left: 1px;">Spotify</p>
+                    </a>
+                    <a target=”_blank” href="https://steamcommunity.com/id/aerosness">
+                      <img style="max-width: 50px; max-height: 50px;" src="resources/img/steamlogo.png">
+                      <p style="text-align: center; position: absolute; margin-left: 4px;">Steam</p>
+                    </a>
+                    <a target=”_blank” href="https://www.tiktok.com/@aerosness">
+                      <img style="max-width: 50px; max-height: 50px;" src="resources/img/tiktoklogo.png">
+                      <p style="text-align: center; position: absolute; margin-left: 4px;">Tiktok</p>
+                    </a>
+                    <a target=”_blank” href="https://ru.pinterest.com/aerosness/">
+                      <img style="max-width: 50px; max-height: 50px;" src="resources/img/pinlogo.png">
+                      <p style="text-align: center; position: absolute;">Pinterest</p>
+                    </a>
+                    <a target=”_blank” href="https://www.roblox.com/users/388269305/profile">
+                      <img style="max-width: 50px; max-height: 50px;" src="resources/img/robloxlogo.png">
+                      <p style="text-align: center; position: absolute; margin-left: 2px;">Roblox</p>
+                    </a>
+                  </div>
+                  <div style="margin-top: 50px; display: flex; align-content: space-evenly; justify-content: space-between; width: 640px;">
+                    <a target=”_blank” href="https://x.com/aerosness">
+                      <img style="max-width: 50px; max-height: 50px;" src="resources/img/xicon.png">
+                      <p style="text-align: center; position: absolute; margin-left: 20px;">X</p>
+                    </a>
+                  </div>
               </div>
           </div>
       </div>
@@ -185,11 +221,9 @@
       <script src="JS/WindowDrag.js"></script>
  <!-- window buttons  -->
 <script src="JS/WindowButtons.js"></script>
-
 <script src="JS/MoblieCheck.js"></script>
-
 <script src="JS/DesktopButtons.js"></script>
-
+<script src="JS/StartButton.js"></script>
 <!-- Taskbar Gradient Hover -->
 <script src="JS/TaskbarGradient.js"></script>
 
@@ -205,8 +239,6 @@
       document.addEventListener('mousemove', startAudio);
       document.addEventListener('click', startAudio);
   });
-
-
 </script>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6N7FC828GN"></script>
@@ -217,5 +249,4 @@
 
   gtag('config', 'G-6N7FC828GN');
 </script>
-<script src="JS/StartButton.js"></script>
 </body>
