--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <img src="resources/svg/avframe.svg" class="glass profile-border">
   <img src="resources/img/pfp.jpg" class="profileimg">
   </div>
-  <button onclick="window.location.href='./main.html'" class="forwardbtn"><u>L</u>og In</button>
+  <button onclick="window.location.href='./main'" class="forwardbtn"><u>L</u>og In</button>
   
 
 <!-- Google tag (gtag.js) -->
